--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "sass": "^1.26.9"
   },
   "dependencies": {
-    "handlebars": "^4.7.7",
     "js": "^0.1.0",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "parcel-plugin-handlebars-precompile": "^1.0.2"
   }
 }
