--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "parcel-bundler": "^1.12.4",
     "pnotify": "^5.2.0",
     "posthtml-include": "^1.4.3",
-    "sass": "^1.26.9"
+    "sass": "^1.35.1"
   },
   "dependencies": {
     "js": "^0.1.0",
     "lodash.debounce": "^4.0.8",
+    "node-sass": "^6.0.1",
     "parcel-plugin-handlebars-precompile": "^1.0.2"
   }
 }
